# safeband

./: .doc-checks.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  IDEAS.md  Makefile  README.md  ROADMAP.md  codecov.yml  consumer.py  docker-compose.yml  example.ini  pyproject.toml  requirements-dev.txt  requirements.txt  rpc_client.py  rpc_server.py
.github/: dependabot.yml
.github/workflows/: python-app.yml  release.yml
examples/: 02_multivariate_cdc_2023.ipynb  03_conditional_ae_2023.ipynb  04_eco_pack_presov.ipynb  05_scalability.py  05_scalability_eval.ipynb  06_tsb_ad_benchmark.ipynb  06_tsb_ad_fullrun.py  07_fault_diagnosis_validation.py  08_i7_scaled_validation.py  09_i7_freeze_latency.py  10_i7_regime_fp.py  11_i7_ablations.py  12_i7_intel_lab_realfaults.py  13_i7_lbnl_bias.py  14_i5_reunanen_headtohead.py  comparison.ipynb  comparison_ARIMA.ipynb  comparison_diagnostics.py
examples/benchmarks/: i5_reunanen_skab.csv  i7_confusion_matrix.csv  i7_deadband.csv  i7_freeze_latency.csv  i7_freeze_quiescent.csv  i7_intel_lab_fault_types.csv  i7_intel_lab_operating_points.csv  i7_intel_lab_summary.csv  i7_lbnl_bias.csv  i7_per_type_metrics.csv  i7_regime_fp.csv  i7_scaled_bias_by_channel.csv  i7_scaled_normal_precision.csv  i7_scaled_per_type.csv  i7_sensitivity_sweep.csv  tsb_ad_fullrun.csv  tsb_ad_fullrun_smoke.csv  tsb_ad_results.csv
examples/models/: bess_model.py
functions/: __init__.py  anomaly.py  compose.py  email_client.py  encryption.py  evaluate.py  fault_diagnosis.py  model_persistence.py  parse.py  plot.py  proba.py  reunanen.py  streamz_tools.py  typing_extras.py  utils.py
publications/ESwA2023/: main.bib  root.tex
publications/ESwA2023/sections/: case_study.tex  introduction.tex  preliminaries.tex  proposed_method.tex
publications/I7_fault_typing/: .gitignore  REPRODUCE.md  main.bbl  main.bib  main.tex  make_figures.py
publications/I7_fault_typing/sections/: abstract.tex  conclusion.tex  discussion.tex  experimental_setup.tex  introduction.tex  method.tex  related_work.tex  reproducibility.tex  results.tex
publications/PC2023 Online Outlier Detection/: online_outlier_threshold.tex
publications/PC2023 Online Outlier Detection/sections/: case_study.tex  conclusion.tex
publications/ilustrate/: requirements.txt
publications/ilustrate/pc2023/: pc2023_ilustrator.ipynb  plot_matplotlib.py
safeband/: anomaly.py  evaluate.py  fault_diagnosis.py  model_persistence.py  parse.py  reunanen.py  streamz_tools.py
scripts/: README.md  pulsar_decryption_service.py  pulsar_encryption_service.py  pulsar_producer.py
tests/: __init__.py  test_anomaly.py  test_dependency_policy.py  test_encryption.py  test_fault_diagnosis.py  test_model_persistence.py  test_parse.py  test_query.py  test_reunanen.py  test_rpc_server_preprocess.py  test_rpc_server_sink.py  test_rpc_server_source.py  test_rpc_server_start.py  test_streamz_nats.py  test_streamz_tools.py
