[project]
name = "adaptive-interpretable-ad"
version = "0.1.0"
description = "Online outlier detection service for industrial SCADA-based infrastructures for low-latency detection and change-point adaptation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.7",
    "human-security>=1.0",
    "matplotlib<4.0.0",
    "paho-mqtt<3.0.0",
    "pandas<3.0.0",
    "pandas-stubs>=2.3.2.250827",
    "plotly<7.0.0",
    "river~=0.21.0 ; platform_machine != 'aarch64' and sys_platform == 'linux'",
    "river ; (implementation_version >= '3.11' and implementation_version < '3.13' and platform_machine == 'aarch64' and sys_platform == 'linux') or sys_platform == 'darwin'",
    "scipy<2.0.0",
    "streamz<1.0.0",
    "streamz-pulsar>=0.1.1",
    "types-paho-mqtt>=1.6.0.20240321",
    "typing-extensions<5.0.0",
]

[tool.uv.sources]
river = { git = "https://github.com/MarekWadinger/river.git" }

[dependency-groups]
build = [
    "setuptools>=80.9.0",
    "setuptools-rust>=1.12.0",
    "wheel>=0.45.1",
]
dev = [
    "flake8>=7.3.0",
    "flake8-html>=0.4.3",
    "jupyter<2.0.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-html>=4.2.0",
    "ruff>=0.15.16",
    "ty>=0.0.48",
]
example = [
    "bayesian-optimization>=2.0.4",
    "numpy>=2.3.2",
]

[tool.markdownlint]
no-duplicate-heading = { siblings_only = true, allow_different_nesting = true }
line-length = { stern = true, code_blocks = true }

[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-glob=README.md",
    "--verbose",
    "-ra",
    "-m not datasets and not slow",
    "--color=yes",
    "--junitxml=reports/junit/junit.xml",
    "--html=reports/junit/report/index.html",
    "--cov=.",
    "--cov-report=xml:reports/coverage/coverage.xml",
    "--cov-report=html:reports/coverage/report",
    "--cov-config=reports/.coveragerc"
]

norecursedirs = [".*", "examples", "publications", "scripts"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "NUMBER", "ELLIPSIS", "IGNORE_EXCEPTION_DETAIL"]

[tool.flake8]
exclude = ".*"
extend-ignore = ["E203"]
